; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_epca.c_verifyChannel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_epca.c_verifyChannel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel = type { i64 }
%struct.tty_struct = type { %struct.channel* }

@digi_channels = common dso_local global %struct.channel* null, align 8
@nbdevs = common dso_local global i64 0, align 8
@EPCA_MAGIC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.channel* (%struct.tty_struct*)* @verifyChannel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.channel* @verifyChannel(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.channel*, align 8
  %3 = alloca %struct.tty_struct*, align 8
  %4 = alloca %struct.channel*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %3, align 8
  %5 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %6 = icmp ne %struct.tty_struct* %5, null
  br i1 %6, label %7, label %31

7:                                                ; preds = %1
  %8 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %9 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %8, i32 0, i32 0
  %10 = load %struct.channel*, %struct.channel** %9, align 8
  store %struct.channel* %10, %struct.channel** %4, align 8
  %11 = load %struct.channel*, %struct.channel** %4, align 8
  %12 = load %struct.channel*, %struct.channel** @digi_channels, align 8
  %13 = getelementptr inbounds %struct.channel, %struct.channel* %12, i64 0
  %14 = icmp uge %struct.channel* %11, %13
  br i1 %14, label %15, label %30

15:                                               ; preds = %7
  %16 = load %struct.channel*, %struct.channel** %4, align 8
  %17 = load %struct.channel*, %struct.channel** @digi_channels, align 8
  %18 = load i64, i64* @nbdevs, align 8
  %19 = getelementptr inbounds %struct.channel, %struct.channel* %17, i64 %18
  %20 = icmp ult %struct.channel* %16, %19
  br i1 %20, label %21, label %30

21:                                               ; preds = %15
  %22 = load %struct.channel*, %struct.channel** %4, align 8
  %23 = getelementptr inbounds %struct.channel, %struct.channel* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @EPCA_MAGIC, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = load %struct.channel*, %struct.channel** %4, align 8
  store %struct.channel* %28, %struct.channel** %2, align 8
  br label %32

29:                                               ; preds = %21
  br label %30

30:                                               ; preds = %29, %15, %7
  br label %31

31:                                               ; preds = %30, %1
  store %struct.channel* null, %struct.channel** %2, align 8
  br label %32

32:                                               ; preds = %31, %27
  %33 = load %struct.channel*, %struct.channel** %2, align 8
  ret %struct.channel* %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
